@@ -31,7 +31,9 @@ import org.hyperledger.besu.ethereum.eth.sync.snapsync.SnapSyncConfiguration;
 import org.hyperledger.besu.ethereum.p2p.rlpx.wire.MessageData;
 import org.hyperledger.besu.ethereum.proof.WorldStateProofProvider;
 import org.hyperledger.besu.ethereum.rlp.BytesValueRLPOutput;
+import org.hyperledger.besu.ethereum.rlp.RLP;
 import org.hyperledger.besu.ethereum.trie.CompactEncoding;
+import org.hyperledger.besu.ethereum.trie.MerkleTrie;
 import org.hyperledger.besu.ethereum.trie.diffbased.bonsai.BonsaiWorldStateProvider;
 import org.hyperledger.besu.ethereum.trie.diffbased.bonsai.storage.BonsaiWorldStateKeyValueStorage;
 import org.hyperledger.besu.ethereum.trie.diffbased.common.DiffBasedWorldStateProvider;
@@ -226,35 +228,43 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
         .addArgument(() -> asLogHash(range.endKeyHash()))
         .log();
     try {
+      if (range.worldStateRootHash().equals(Hash.EMPTY_TRIE_HASH)) {
+        return AccountRangeMessage.create(new HashMap<>(), List.of(MerkleTrie.EMPTY_TRIE_NODE));
+      }
       return worldStateStorageProvider
           .apply(range.worldStateRootHash())
           .map(
               storage -> {
                 LOGGER.trace("obtained worldstate in {}", stopWatch);
-                StatefulPredicate shouldContinuePredicate =
-                    new StatefulPredicate(
+                ResponseSizePredicate responseSizePredicate =
+                    new ResponseSizePredicate(
                         "account",
                         stopWatch,
                         maxResponseBytes,
                         (pair) -> {
-                          var rlpOutput = new BytesValueRLPOutput();
-                          rlpOutput.startList();
-                          rlpOutput.writeBytes(pair.getFirst());
-                          rlpOutput.writeRLPBytes(pair.getSecond());
-                          rlpOutput.endList();
-                          return rlpOutput.encodedSize();
+                          Bytes bytes =
+                              AccountRangeMessage.toSlimAccount(RLP.input(pair.getSecond()));
+                          return Hash.SIZE + bytes.size();
                         });
 
+                final Bytes32 endKeyBytes = range.endKeyHash();
+                var shouldContinuePredicate =
+                    new ExceedingPredicate(
+                        new EndKeyExceedsPredicate(endKeyBytes).and(responseSizePredicate));
+
                 NavigableMap<Bytes32, Bytes> accounts =
-                    storage.streamFlatAccounts(
-                        range.startKeyHash(), range.endKeyHash(), shouldContinuePredicate);
+                    storage.streamFlatAccounts(range.startKeyHash(), shouldContinuePredicate);
 
                 if (accounts.isEmpty() && shouldContinuePredicate.shouldContinue.get()) {
+                  var fromNextHash =
+                      range.endKeyHash().compareTo(range.startKeyHash()) >= 0
+                          ? range.endKeyHash()
+                          : range.startKeyHash();
                   // fetch next account after range, if it exists
                   LOGGER.debug(
                       "found no accounts in range, taking first value starting from {}",
-                      asLogHash(range.endKeyHash()));
-                  accounts = storage.streamFlatAccounts(range.endKeyHash(), UInt256.MAX_VALUE, 1L);
+                      asLogHash(fromNextHash));
+                  accounts = storage.streamFlatAccounts(fromNextHash, UInt256.MAX_VALUE, 1L);
                 }
 
                 final var worldStateProof =
@@ -328,8 +338,8 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
               storage -> {
                 LOGGER.trace("obtained worldstate in {}", stopWatch);
                 // reusable predicate to limit by rec count and bytes:
-                var statefulPredicate =
-                    new StatefulPredicate(
+                var responsePredicate =
+                    new ResponseSizePredicate(
                         "storage",
                         stopWatch,
                         maxResponseBytes,
@@ -361,9 +371,12 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
                     new WorldStateProofProvider(new WorldStateStorageCoordinator(storage));
 
                 for (var forAccountHash : range.hashes()) {
+                  var predicate =
+                      new ExceedingPredicate(
+                          new EndKeyExceedsPredicate(endKeyBytes).and(responsePredicate));
                   var accountStorages =
                       storage.streamFlatStorages(
-                          Hash.wrap(forAccountHash), startKeyBytes, endKeyBytes, statefulPredicate);
+                          Hash.wrap(forAccountHash), startKeyBytes, predicate);
 
                   //// address partial range queries that return empty
                   if (accountStorages.isEmpty() && isPartialRange) {
@@ -383,7 +396,7 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
 
                   // if a partial storage range was requested, or we interrupted storage due to
                   // request limits, send proofs:
-                  if (isPartialRange || !statefulPredicate.shouldGetMore()) {
+                  if (isPartialRange || !predicate.shouldGetMore()) {
                     // send a proof for the left side range origin
                     proofNodes.addAll(
                         worldStateProof.getStorageProofRelatedNodes(
@@ -400,7 +413,7 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
                     }
                   }
 
-                  if (!statefulPredicate.shouldGetMore()) {
+                  if (!predicate.shouldGetMore()) {
                     break;
                   }
                 }
@@ -457,8 +470,9 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
         } else {
           Optional<Bytes> optCode = worldStateStorageCoordinator.getCode(Hash.wrap(codeHash), null);
           if (optCode.isPresent()) {
-            if (sumListBytes(codeBytes) + optCode.get().size() > maxResponseBytes
-                || stopWatch.getTime() > StatefulPredicate.MAX_MILLIS_PER_REQUEST) {
+            if (!codeBytes.isEmpty()
+                && (sumListBytes(codeBytes) + optCode.get().size() > maxResponseBytes
+                    || stopWatch.getTime() > ResponseSizePredicate.MAX_MILLIS_PER_REQUEST)) {
               break;
             }
             codeBytes.add(optCode.get());
@@ -509,16 +523,19 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
                   // first element in paths is account
                   if (triePath.size() == 1) {
                     // if there is only one path, presume it should be compact encoded account path
-                    var optStorage =
-                        storage.getTrieNodeUnsafe(CompactEncoding.decode(triePath.get(0)));
-                    if (optStorage.isPresent()) {
-                      if (sumListBytes(trieNodes) + optStorage.get().size() > maxResponseBytes
-                          || stopWatch.getTime() > StatefulPredicate.MAX_MILLIS_PER_REQUEST) {
-                        break;
-                      }
-                      trieNodes.add(optStorage.get());
+                    final Bytes location = CompactEncoding.decode(triePath.get(0));
+                    var optStorage = storage.getTrieNodeUnsafe(location);
+                    if (optStorage.isEmpty() && location.isEmpty()) {
+                      optStorage = Optional.of(MerkleTrie.EMPTY_TRIE_NODE);
                     }
-
+                    var trieNode = optStorage.orElse(Bytes.EMPTY);
+                    if (!trieNodes.isEmpty()
+                        && (sumListBytes(trieNodes) + trieNode.size() > maxResponseBytes
+                            || stopWatch.getTime()
+                                > ResponseSizePredicate.MAX_MILLIS_PER_REQUEST)) {
+                      break;
+                    }
+                    trieNodes.add(trieNode);
                   } else {
                     // There must be at least one element in the path otherwise it is invalid
                     if (triePath.isEmpty()) {
@@ -529,19 +546,26 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
                     // otherwise the first element should be account hash, and subsequent paths
                     // are compact encoded account storage paths
 
-                    final Bytes accountPrefix = triePath.get(0);
+                    final Bytes32 accountPrefix = Bytes32.leftPad(triePath.getFirst());
+                    var optAccount = storage.getAccount(Hash.wrap(accountPrefix));
+                    if (optAccount.isEmpty()) {
+                      continue;
+                    }
 
                     List<Bytes> storagePaths = triePath.subList(1, triePath.size());
                     for (var path : storagePaths) {
+                      final Bytes location = CompactEncoding.decode(path);
                       var optStorage =
-                          storage.getTrieNodeUnsafe(
-                              Bytes.concatenate(accountPrefix, CompactEncoding.decode(path)));
-                      if (optStorage.isPresent()) {
-                        if (sumListBytes(trieNodes) + optStorage.get().size() > maxResponseBytes) {
-                          break;
-                        }
-                        trieNodes.add(optStorage.get());
+                          storage.getTrieNodeUnsafe(Bytes.concatenate(accountPrefix, location));
+                      if (optStorage.isEmpty() && location.isEmpty()) {
+                        optStorage = Optional.of(MerkleTrie.EMPTY_TRIE_NODE);
                       }
+                      var trieNode = optStorage.orElse(Bytes.EMPTY);
+                      if (!trieNodes.isEmpty()
+                          && sumListBytes(trieNodes) + trieNode.size() > maxResponseBytes) {
+                        break;
+                      }
+                      trieNodes.add(trieNode);
                     }
                   }
                 }
@@ -565,7 +589,39 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
     }
   }
 
-  static class StatefulPredicate implements Predicate<Pair<Bytes32, Bytes>> {
+  /**
+   * Predicate that doesn't immediately stop when the delegate predicate returns false, but instead
+   * sets a flag to stop after the current element is processed.
+   */
+  static class ExceedingPredicate implements Predicate<Pair<Bytes32, Bytes>> {
+    private final Predicate<Pair<Bytes32, Bytes>> delegate;
+    final AtomicBoolean shouldContinue = new AtomicBoolean(true);
+
+    public ExceedingPredicate(final Predicate<Pair<Bytes32, Bytes>> delegate) {
+      this.delegate = delegate;
+    }
+
+    @Override
+    public boolean test(final Pair<Bytes32, Bytes> pair) {
+      final boolean result = delegate.test(pair);
+      return shouldContinue.getAndSet(result);
+    }
+
+    public boolean shouldGetMore() {
+      return shouldContinue.get();
+    }
+  }
+
+  /** Predicate that stops when the end key is exceeded. */
+  record EndKeyExceedsPredicate(Bytes endKey) implements Predicate<Pair<Bytes32, Bytes>> {
+
+    @Override
+    public boolean test(final Pair<Bytes32, Bytes> pair) {
+      return endKey.compareTo(Bytes.wrap(pair.getFirst())) > 0;
+    }
+  }
+
+  static class ResponseSizePredicate implements Predicate<Pair<Bytes32, Bytes>> {
     // default to a max of 4 seconds per request
     static final long MAX_MILLIS_PER_REQUEST = 4000;
 
@@ -575,24 +631,17 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
     final Function<Pair<Bytes32, Bytes>, Integer> encodingSizeAccumulator;
     final StopWatch stopWatch;
     final int maxResponseBytes;
-    // TODO: remove this hack,  10% is a fudge factor to account for the proof node size
-    final int maxResponseBytesFudgeFactor;
     final String forWhat;
 
-    StatefulPredicate(
+    ResponseSizePredicate(
         final String forWhat,
         final StopWatch stopWatch,
         final int maxResponseBytes,
         final Function<Pair<Bytes32, Bytes>, Integer> encodingSizeAccumulator) {
       this.stopWatch = stopWatch;
       this.maxResponseBytes = maxResponseBytes;
-      this.maxResponseBytesFudgeFactor = maxResponseBytes * 9 / 10;
       this.forWhat = forWhat;
       this.encodingSizeAccumulator = encodingSizeAccumulator;
-    }
-
-    public boolean shouldGetMore() {
-      return shouldContinue.get();
     }
 
     @Override
@@ -618,7 +667,7 @@ class SnapServer implements BesuEvents.InitialSyncCompletionListener {
       var underRecordLimit = recordLimit.addAndGet(1) <= MAX_ENTRIES_PER_REQUEST;
       var underByteLimit =
           byteLimit.accumulateAndGet(0, (cur, __) -> cur + encodingSizeAccumulator.apply(pair))
-              < maxResponseBytesFudgeFactor;
+              < maxResponseBytes;
       if (underRecordLimit && underByteLimit) {
         return true;
       } else {
